--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ body {
     text-transform: uppercase;
     letter-spacing: 0.03em;
     text-decoration: none;
+    color: var(--title-text-color);
 }
 
 /* Site navigation */
